# simp_protocol

./: .gitattributes  Cargo.toml  LICENSE  README.md
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: rust.yml
examples/: esp32_send.rs  pc_receive.rs
src/: lib.rs  mocks.rs  packet.rs  sbt_client.rs  sbt_server.rs  uart.rs
